<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:background="@color/black_transparent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_gravity=""
                android:id="@+id/widget_title"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/widget_title"
                style="@style/WidgetText" />

            <ImageButton
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:id="@+id/close"
                android:src="@drawable/close_icon"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/result_layout"
            android:layout_margin="7dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WidgetTitleText"
                tools:text="Some title"
                />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WidgetText"
                tools:text="Some text"/>

            <Button
                android:id="@+id/open_browser"
                android:textColor="@android:color/white"
                android:background="@color/black_transparent_light"
                android:layout_margin="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_browser" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="7dp"
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/WidgetText"
                android:text="@string/loading_data"/>

            <ProgressBar
                android:layout_margin="7dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/error_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/WidgetText"
                android:layout_gravity="center_horizontal"
                android:text="@string/loading_error"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_margin="7dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/warning_icon"/>

            <Button
                android:layout_margin="7dp"
                android:id="@+id/try_again"
                android:textColor="@android:color/white"
                android:background="@color/black_transparent_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/try_again" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/no_results_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/WidgetText"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_results"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_margin="7dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sad_icon"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>